--- a/views/resources/style.css
+++ b/views/resources/style.css
@@ -1,12 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 :root{
-    --background: #e4e4e4;
+    --background: #f5f5f5;
     --primary: #8A2EE2;
     --success: #0d6e0a;
     --error: #d40b0b;
-    --light-gray: #e2e2e2;
+    --light-gray: #c7c7c7;
     font-family: 'Nunito', sans-serif;
+}
+
+html{
+    background-color: var(--background);
 }
 
 *{
@@ -63,6 +67,15 @@ button{
     height: 100vh;
 }
 
+select{
+    background-color: var(--light-gray);
+    outline: none;
+    font-size: 1rem;
+    padding: 20px;
+    border-radius: 8px;
+    border: none;
+}
+
 .tabs {
     top: 0;
     display: flex;
@@ -79,7 +92,7 @@ button{
 }
 
 .tabs__tab--selected {
-    color: var(--light-gray);
+    color: var(--background);
     text-decoration: underline;
     font-size: 1.5rem;
     background-color: var(--primary);
@@ -210,7 +223,7 @@ button{
     font-size: 0.8rem;
     padding: 10px 16px 10px 16px;
     margin: 4px;
-    border-radius: 1rem;
+    border-radius: 2rem;
     color: white;
     border: none;
 }
@@ -221,7 +234,7 @@ button{
     padding: 10px 16px 10px 16px;
     margin: 4px;
     /*padding: 8px 16px 8px 16px;*/
-    border-radius: 1rem;
+    border-radius: 2rem;
     color: white;
     border: none;
 }
